--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
   <Head>
     <title></title>
     <link rel="stylesheet" href="styles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+
   </Head>
   <body>
     <h1>test h1</h1>
 
     <div>
       <video width="400" controls>
-        <source src="/images/LINE_MOVIE_1631110650901.mp4" type="video/ogg">
         Your browser does not support HTML video.
       </video>
     </div>
-    <div>
-      <video width="400" controls>
-        <source src="/images/LINE_MOVIE_1621888454633.mp4" type="video/mp4">
-        Your browser does not support HTML video.
-      </video>
-    </div>
+
+    <h1>札幌市 お誕生日おめでとうございます </h1>
+
+
+    <h1 class="hm">Hina Mincho - 札幌市 お誕生日おめでとうございます </h1>
+
+    <h1 class="ns">Noto Serif JP - 札幌市 お誕生日おめでとうございます</h1>
+
+    <h1 class="nss">Noto Sans JP - 札幌市 お誕生日おめでとうございます</h1>
+
 
 
   </body>
