--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <Head>
     <title></title>
     <link rel="stylesheet" href="styles/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Yuji+Syuku&family=Noto+Sans+JP:wght@100..900&family=Zen+Kaku+Gothic+New&family=Zen+Maru+Gothic&family=Noto+Serif+JP:wght@200..900&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
   </Head>
   <body>
     <h1>test h1</h1>
@@ -13,13 +14,18 @@
     <h1>札幌市 お誕生日おめでとうございます </h1>
 
 
-    <h1 class="hm">Hina Mincho - 札幌市 お誕生日おめでとうございます </h1>
+    <h1 class="hm">Hina Mincho - 言論及び信仰の自由が受けられ </h1>
 
-    <h1 class="ns">Noto Serif JP - 札幌市 お誕生日おめでとうございます</h1>
+    <h1 class="njp">Noto Serif JP - 言論及び信仰の自由が受けられ</h1>
 
-    <h1 class="nss">Noto Sans JP - 札幌市 お誕生日おめでとうございます</h1>
+    <h1 class="njps">Noto Sans JP - 言論及び信仰の自由が受けられす</h1>
 
+    <h1 class="zkg">Zen Kaku Gothic - 言論及び信仰の自由が受けられす</h1>
 
+    <h1 class="zmg">Zen Maru Gothic - 言論及び信仰の自由が受けられす</h1>
 
+    <h1 class="ys">Yuji Syuku - 言論及び信仰の自由が受けられす</h1>
+
+    
   </body>
 </html>
