--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <Head>
     <title></title>
-    <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Yuji+Syuku&family=Noto+Sans+JP:wght@100..900&family=Zen+Kaku+Gothic+New&family=Zen+Maru+Gothic&family=Noto+Serif+JP:wght@200..900&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Yuji+Syuku&family=Noto+Sans+JP:wght@100..900&family=Zen+Kaku+Gothic+New&family=Zen+Maru+Gothic&family=Noto+Serif+JP:wght@200..900&family=Zen+Kaku+Gothic+New&display=swap" >
+    <link rel="stylesheet" href="styles/index.css">
+    <script src="/scripts/index.js"></script>
+
   </Head>
   <body>
     <h1>test h1</h1>
