--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <Head>
-    <title></title>
+    <title>Haru</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,10 +30,11 @@
     
     <div class="header" id="myHeader">
       <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="/index.html" class="active">Home</a>
+        <a href="/earlydays.html">Early Days</a>
+        <a href="/cousinrosco.html">Cousin Rosco</a>
+        <a href="/birthdays.html">BIRTHDAYS</a>
+        <a href="/wanwan.html">ワンワン</a>
         <a href="javascript:void(0);" class="icon" onclick="myF1()">
           <i class="fa fa-bars"></i>
         </a>
