--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     
     <div class="header" id="myHeader">
       <div class="topnav" id="myTopnav">
-        <a href="/index.html" class="active">Home</a>
+        <a href="https://home.sato-chiu.com/" class="active">Logo</a>
+        <a href="/index.html">Home</a>
         <a href="/earlydays.html">Early Days</a>
         <a href="/cousinrosco.html">Cousin Rosco</a>
         <a href="/birthdays.html">BIRTHDAYS</a>
