--- a/birthdays.html
+++ b/birthdays.html
@@ -30,7 +30,7 @@
     
     <div class="header" id="myHeader">
       <div class="topnav" id="myTopnav">
-        <a href="https://home.sato-chiu.com/" class="active">Logo</a>
+        <a href="https://home.sato-chiu.com/" class="active"><i class="fa fa-home"></i></a>
         <a href="/index.html">Home</a>
         <a href="/earlydays.html">Early Days</a>
         <a href="/cousinrosco.html">Cousin Rosco</a>
