--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 
     <div class="top-container" >
+      <img src="/images/header 4.jpg" alt="haru" class="responsive" width="600" height="400" style="display: none;">
     </div>
     
     <div class="header" id="myHeader">
