--- a/birthdays.html
+++ b/birthdays.html
@@ -42,6 +42,8 @@
     </div>
     
     <div class="content">
+      <h1>BIRTHDAYS</h1>
+
       <h3>On Scroll Sticky Header</h3>
       <p>The header will stick to the top when you reach its scroll position.</p>
       <p>Scroll back up to remove the sticky effect.</p>
