--- a/wanwan.html
+++ b/wanwan.html
@@ -42,6 +42,7 @@
     </div>
     
     <div class="content">
+      <h1>ワンワン</h1>
       <div class="video-mask">
         <video controls autoplay muted>
           <source src="/images/LINE_MOVIE_1631110650901.mp4" type="video/mp4" style="border-radius: 25px;">
