--- a/wanwan.html
+++ b/wanwan.html
@@ -28,8 +28,10 @@
     
     <div class="header" id="myHeader">
       <div class="topnav" id="myTopnav">
-        <a href="https://home.sato-chiu.com/" class="active"><i class="fa fa-home"></i></a>
-        <a href="/index.html">Home</a>
+        <a href="https://home.sato-chiu.com/"><img src ="/images/favicon1.jpg" style=" width: 25px; height: 25px; border-radius:25px; "></a>
+        <a href="/birthdays.html">&#x25C0; </a>
+        <a href="/index.html" class="active">Home</a>
+        <a href="">&#x25B6; </a>
         <a href="/earlydays.html">Early Days</a>
         <a href="/cousinrosco.html">Cousin Rosco</a>
         <a href="/birthdays.html">BIRTHDAYS</a>
