--- a/birthdays.html
+++ b/birthdays.html
@@ -28,7 +28,7 @@
     
     <div class="header" id="myHeader">
       <div class="topnav" id="myTopnav">
-        <a href="https://home.sato-chiu.com/"><img src ="/images/favicon1.jpg" style=" width: 25px; height: 25px; border-radius:25px; "></a>
+        <a href="https://home.sato-chiu.com/"><img src ="/images/favicon1.jpg" class="logo"></a>
         <a href="/cousinrosco.html">&#x25C0; </a>
         <a href="/index.html" class="active">Home</a>
         <a href="/wanwan.html">&#x25B6; </a>
