--- a/earlydays.html
+++ b/earlydays.html
@@ -77,13 +77,13 @@
       <div class="mySlides fade">
         <div class="numbertext">4 / 5</div>
         <img src="/images/media 1-3.jpg" style="width:100%; border-radius: 25px;">
-        <div class="text">Kension in Furano koen</div>
+        <div class="text">富良野公園</div>
       </div>
       
       <div class="mySlides fade">
         <div class="numbertext">5 / 5</div>
         <img src="/images/media 1-4.jpg" style="width:100%; border-radius: 25px;">
-        <div class="text">Haru in Toronto Park</div>
+        <div class="text">Toronto Park</div>
       </div>
       
       <a class="prev" onclick="plusSlides(-1)">❮</a>
