--- a/cousinrosco.html
+++ b/cousinrosco.html
@@ -28,7 +28,7 @@
     
     <div class="header" id="myHeader">
       <div class="topnav" id="myTopnav">
-        <a href="https://www.sato-chiu.com/"><img src ="/images/favicon1.jpg" class="logo"></a>
+        <a href="https://www.sato-chiu.com#_haru"><img src ="/images/favicon1.jpg" class="logo"></a>
         <a href="/earlydays.html">&#x25C0; </a>
         <a href="/index.html" class="active">Home</a>
         <a href="/birthdays.html">&#x25B6; </a>
