--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h1>Home</h1>
       <img src="/images/header 4.jpg" alt="haru" class="video-mask">
         <h3>Greetings from the Great White North!</h3>
-        <p>我々春<b>です</b>, a Shiba Inu born in the land of the rising sun in March 2016. After a few months of exploring the beautiful countryside of Japan, I embarked on a grand adventure to Canada in July of that same year.
+        <p>I am Haru <b>DESU</b>, a Shiba Inu born in the land of the rising sun in March 2016. After a few months of exploring the beautiful countryside of Japan, I embarked on a grand adventure to Canada in July of that same year.
         Since then, I've called Toronto my home, and I've absolutely fallen in love with this bustling city. There's always something new to discover, from the towering skyscrapers to the serene parks.
         One of my favorite things to do is go on long walks. I love exploring the local parks and sniffing out all the interesting scents. I'm particularly fond of High Park, with its vast green spaces and friendly people.
         After a day of exploring, I enjoy coming home for dinner and a game of fetch. My favorite toy is a green IKEA ball. I love chasing it around the house until I'm completely out of breath.
