--- a/earlydays.html
+++ b/earlydays.html
@@ -2,7 +2,8 @@
 <html>
   <Head>
     <title>Haru</title>
-
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
