--- a/birthdays.html
+++ b/birthdays.html
@@ -54,7 +54,10 @@
 
        <!-- Photo Grid -->
       <div class="row" style="margin-left: auto; margin-right: auto; width: 95%;"> 
+
         <div class="column">
+          <img src="/images/0Male2 10days.jpg" style="width:100%">
+          <p class="caption">10 days old</p>
           <img src="/images/media 3-2.jpg" style="width:100%">
           <p class="caption">一歳</p>
           <img src="/images/media 3-5.jpg" style="width:100%">
@@ -64,6 +67,7 @@
         </div>
 
         <div class="column">
+          <img src="/images/2772.jpg" style="width:100%">
           <img src="/images/media 3-3.jpg" style="width:100%">
           <p class="caption">二歳</p>
           <img src="/images/media 3-6.jpg" style="width:100%">
@@ -74,10 +78,13 @@
         </div>  
 
         <div class="column">
+          <img src="/images/2811.jpg" style="width:100%">
           <img src="/images/media 3-4.jpg" style="width:100%">
           <p class="caption">三歳</p>
           <img src="/images/media 3-7.jpg" style="width:100%">
           <p class="caption">六歳</p>
+
+
         </div>
 
       </div>
